--- a/index.html
+++ b/index.html
@@ -61,46 +61,46 @@
                 </button> 
                 <form class="form">
                     <h2>Оставьте свои данные, мы вам перезвоним</h2>
-                    <label class="form-field">
+                    <div class="form-field">
                         <span>Имя</span>
-                        <div class="form-wrap">
+                        <label class="form-wrap">
                             <input type="text" class="form-input" name="name"
                             placeholder=" " />
                              
                             <svg class="form-person" width="18" height="18">
                                 <use href="./images/icons.svg#icon-person"></use>
                             </svg>
-                        </div> 
-                    </label>
+                        </label> 
+                    </div>
 
-                    <label class="form-field">
+                    <div class="form-field">
                         <span>Телефон</span>
-                        <div class="form-wrap">
+                        <label class="form-wrap">
                             <input type="tel" class="form-input" name="tel"
                          placeholder=" "/>
                          <svg class="form-person" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone-black"></use>
                         </svg>
-                        </div>
-                    </label>
+                        </label>
+                    </div>
 
-                    <label class="form-field">
+                    <div class="form-field">
                         <span>Почта</span>
-                        <div class="form-wrap">
+                        <label class="form-wrap">
                             <input type="email" class="form-input" name="email"
                          placeholder=" "/>
                          <svg class="form-person" width="18" height="18">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
-                        </div>
-                    </label>
+                        </label>
+                    </div>
 
-                    <label class="form-field textarea">
+                    <div class="form-field-wrap">
                         <span class="form-label">Коментарий</span>
                         <textarea name="comment"  placeholder="Введите текст"></textarea>
-                    </label>
-
-                    <label class="form-checkbox">
+                    </div>
+                    
+                    <div class="form-checkbox">
                         <input class="checkbox" type="checkbox" name="topic" value="" >
                         <span class="checkbox-square">
                             <svg class="checkbox-icon" width="15" height="15">
@@ -109,7 +109,7 @@
                         </span>
                         <span class="checkbox-text"> Соглашаюсь с рассылкой и принимаю 
                             <a href="#">Условия договора</a></span>
-                    </label>
+                    </div>
 
                     <button class="form-btn" type="submit">Отправить</button>
                 </form>   
@@ -431,7 +431,7 @@
         </div>
         <form class="footer-form"> 
             <p>Подпишитесь на рассылку</p>
-            <label class="footer-form-field">  
+            <div class="footer-form-field">  
                 <input type="email" class="footer-form-input" name="mail"
                      placeholder=" E-mail"/>
                 <button class="footer-form-btn" type="submit">
@@ -440,7 +440,7 @@
                         <use href="./images/icons.svg#icon-send"></use>
                     </svg>
                 </button>
-            </label>
+            </div>
         </form>
     </div>
     </footer>
