--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <textarea name="comment"  placeholder="Введите текст"></textarea>
                     </div>
                     
-                    <div class="form-checkbox">
+                    <label class="form-checkbox">
                         <input class="checkbox" type="checkbox" name="topic" value="" >
                         <span class="checkbox-square">
                             <svg class="checkbox-icon" width="15" height="15">
@@ -109,7 +109,7 @@
                         </span>
                         <span class="checkbox-text"> Соглашаюсь с рассылкой и принимаю 
                             <a href="#">Условия договора</a></span>
-                    </div>
+                    </label>
 
                     <button class="form-btn" type="submit">Отправить</button>
                 </form>   
