--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                         </label>
                     </div>
 
-                    <div class="form-field-wrap">
+                    <label class="form-field-wrap">
                         <span class="form-label">Коментарий</span>
                         <textarea name="comment"  placeholder="Введите текст"></textarea>
-                    </div>
+                    </label>  
                     
                     <label class="form-checkbox">
                         <input class="checkbox" type="checkbox" name="topic" value="" >
